--- a/Audit_ODM.html
+++ b/Audit_ODM.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Transitions - jQuery Mobile Demos</title>
 	<link rel="shortcut icon" href="../favicon.ico">
-	<link rel="stylesheet" href="../css/reset.css">
-	<link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_purple01 chart_audit_odm" data-page-name="audit_odm">
@@ -36,7 +36,7 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
+		    <a href="index.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
@@ -44,7 +44,7 @@
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
-		    <a href="Audit.html" data-transition="slide" class="navList nav03">
+		    <a href="Audit.html" data-transition="slide" class="navList nav03 cur">
 		        <i class="myico-nav03"></i>
 		        <p>AUDIT</p>
 		    </a>
@@ -63,6 +63,6 @@
 
 <!-- Javascript with AMD 
 ================================================== -->
-<script src="../js/require.js" data-main="../js/main" ></script>	
+<script src="js/require.js" data-main="js/main" ></script>	
 </body>
 </html>
