--- a/Audit_Search.html
+++ b/Audit_Search.html
@@ -20,12 +20,12 @@
     <!-- !!!注意 minimal-ui 是IOS7.1的新属性，最小化浏览器UI -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no, minimal-ui">
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="true" class="bg_purple01 aduit-chart">
+<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_purple01 aduit-chart">
 	<header class="headerWrap">
 		<h2 class="lenovoTitle">Search</h2>
 		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
@@ -35,7 +35,7 @@
 	    <div class="searchTabTag">
 	        <a href="Qstop_Search.html" data-transition="slide" class="tabTag">Q-Stop <i class="tag_down_ico"></i></a>
 	        <a href="FPY_Search.html" data-transition="slide" class="tabTag">FPY/OOB <i class="tag_down_ico"></i></a>
-	        <a href="Audit_Search.html" data-transition="slide" class="tabTag cur">AUdit <i class="tag_down_ico"></i></a>
+	        <a href="Audit_Search.html" data-transition="slide" class="tabTag cur">Audit <i class="tag_down_ico"></i></a>
 	        <a href="FAI_Search.html" data-transition="slide" class="tabTag">FAI <i class="tag_down_ico"></i></a>
 	        <a href="EC_Search.html" data-transition="slide" class="tabTag">EC <i class="tag_down_ico"></i></a>
 	    </div>
@@ -190,6 +190,6 @@
 
 <!-- Javascript with AMD 
 ================================================== -->
-<script src="../js/require.js" data-main="../js/main" ></script>
+<script src="js/require.js" data-main="js/main" ></script>
 </body>
 </html>
