--- a/FAI_Odm.html
+++ b/FAI_Odm.html
@@ -19,9 +19,9 @@
 ================================================== -->
     <!-- !!!注意 minimal-ui 是IOS7.1的新属性，最小化浏览器UI -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no, minimal-ui">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         .ui_fai_pie,
         .ui_fai_bar{
@@ -168,7 +168,7 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
+		    <a href="index.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
@@ -180,7 +180,7 @@
 		        <i class="myico-nav03"></i>
 		        <p>AUDIT</p>
 		    </a>
-		    <a href="FAI.html" data-transition="slide" class="navList nav04">
+		    <a href="FAI.html" data-transition="slide" class="navList nav04 cur">
 		        <i class="myico-nav04"></i>
 		        <p>FAI</p>
 		    </a>
@@ -194,6 +194,6 @@
 
 <!-- Javascript with AMD 
 ================================================== -->
-<script src="../js/require.js" data-main="../js/main" ></script>
+<script src="js/require.js" data-main="js/main" ></script>
 </body>
 </html>
