--- a/FAI.html
+++ b/FAI.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Transitions - jQuery Mobile Demos</title>
     <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_brown01 fai-chart" data-page-name="fai_home">
@@ -29,7 +29,7 @@
     <!-- footer -->
     <div data-role="footer" class="footerWrap">
         <div class="navWrap">
-            <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
+            <a href="index.html" data-transition="slide" class="navList nav01">
                 <i class="myico-nav01"></i>
                 <p>Q-STOP</p>
             </a>
@@ -41,7 +41,7 @@
                 <i class="myico-nav03"></i>
                 <p>AUDIT</p>
             </a>
-            <a href="FAI.html" data-transition="slide" class="navList nav04">
+            <a href="FAI.html" data-transition="slide" class="navList nav04 cur">
                 <i class="myico-nav04"></i>
                 <p>FAI</p>
             </a>
@@ -58,6 +58,6 @@
 
 <!-- Javascript with AMD 
 ================================================== -->
-<script src="../js/require.js" data-main="../js/main" ></script>    
+<script src="js/require.js" data-main="js/main" ></script>    
 </body>
 </html>
