--- a/FPY_OOBSearchResult-1.html
+++ b/FPY_OOBSearchResult-1.html
@@ -20,12 +20,12 @@
     <!-- !!!注意 minimal-ui 是IOS7.1的新属性，最小化浏览器UI -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no, minimal-ui">
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="true" class="bg_blue2 js-chart chart_fpy_oob_s3" data-page-name="fpy_oob_s3">
+<div data-role="page" data-quicklinks="true" data-dom-cache="false" class="bg_blue2 js-chart chart_fpy_oob_s1" data-page-name="fpy_oob_s1">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FPY/OOB Search Result</h2>
 		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
@@ -39,7 +39,7 @@
 			</div>
 			<div class="dateRow">
 				<div class="dateCell-th">Type</div>
-				<div class="dateCell-td">Ramp Up  Mas Product </div>
+				<div class="dateCell-td">Mas Product</div>
 			</div>
 			<div class="dateRow">
 				<div class="dateCell-th">ODM</div>
@@ -52,39 +52,7 @@
 		</div>
 		<div class="searchText"><i class="searR myico-arrowT1"></i></div>
 		<div class="Fpy_idmCon">
-            <div id="chart_fpy_timeLine" style="width:100%;height:410px;"></div>
-		</div>
-		<div class="eachBlockTitle_dt">
-			<h2 class="ebtd_h2">Product: <span>H520s</span></h2>
-			<div class="ebtd_table">
-				<div class="row">
-					<div class="cell-th">Mfg</div>
-					<div class="cell-td">Compal Brazil</div>
-				</div>
-				<div class="row">
-					<div class="cell-th">Input NO.</div>
-					<div class="cell-td">2014-09-16</div>
-				</div>
-				<div class="row">
-					<div class="cell-th">Category</div>
-					<div class="cell-td">Data from your mouse/finger</div>
-				</div>
-				<div class="row">
-					<div class="cell-th">SVT Exit</div>
-					<div class="cell-td">2014-08-12</div>
-				</div>
-				<div class="row">
-					<div class="cell-th">SS</div>
-					<div class="cell-td">2014-09-03</div>
-				</div>
-			</div>
-			<h3 class="ebtd_h3">
-				<span class="ebtd"><i class="myico-arrow_down"></i><em>92</em><b>%FPY</b></span>
-				<span class="ebtd"><i class="myico-arrow_up"></i><em>97</em><b>%OOB</b></span>
-			</h3>
-		</div>
-		<div class="Fpy_idmCon">
-             <div id="chart_fpy_Line" style="width:100%;height:244px;"></div>
+            <div id="chart_fpy_Line" style="width:100%;height:410px;"></div>
 		</div>
 		<div class="stop_odm">
 			<div class="stopTab">
@@ -207,6 +175,6 @@
 
 <!-- Javascript with AMD 
 ================================================== -->
-<script src="../js/require.js" data-main="../js/main" ></script>
+<script src="js/require.js" data-main="js/main" ></script>
 </body>
 </html>
