--- a/index.html
+++ b/index.html
@@ -18,10 +18,22 @@
     <!-- Mobile Specific Metas
 ================================================== -->
     <!-- !!!注意 minimal-ui 是IOS7.1的新属性，最小化浏览器UI -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no, minimal-ui">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no">
+	<meta name="meta-apple-mobile-web-app-status-bar-style" content="default"/>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="css/style.css">
+	<script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript">
+
+    if(/Android (\d+\.\d+)/.test(navigator.userAgent)){
+		//alert('android');
+    }else if (/iP(ad|hone|od)/.test(navigator.userAgent)){ 
+        //alert(navigator.userAgent);
+		document.getElementsByTagName("HTML")[0].classList.add("ios")
+    }
+
+    </script>
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_blue js-chart chart_qstop_home"  data-page-name="qstop_home">
@@ -32,20 +44,48 @@
     </header>
 	<!-- /header -->
     <div role="main" class="ui-content">
-        <div class="chartsBox">
-        	<div id="mapWrap" class="chartsCon" style="width:100%;height:745px;"></div>
-            <div id="chart_home_bar" class="chartsCon chartHide" style="width:100%;height:600px;"></div>
-        </div>
-	</div><!-- /content -->
+       <div class="chartsBox">
+           <div class="chartsCon">
+            <div id="mapSide">
+                <div class="mapSideBot height_firstp swiper-container">
+                    <ul class="mslist swiper-wrapper">
+    <!--
+                        <li class="msEachlist swiper-slide">
+                            <div class="mapDataDetail">
+                                <h2 class="mdh2">
+                                    <span class="mdh2_1">ODM Name:</span>
+                                    <span class="mdh2_2">SHP_SH_DTA</span>
+                                </h2>
+                                <ul class="mdhlist">
+                                    <li class="mdhli">
+                                        <span class="mli_l">Tgt</span>
+                                        <span class="mli_r">2.1M</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+    -->
+                    </ul>
+                </div>
+            </div>
+
+            <div id="mapWrap" style="width:100%;height:65%; clear:both;"></div>
+            </div>
+            <div class="chartsCon chartHide" style="height:98%;">
+                <div id="chart_home_bar" style="width:100%;height:100%;"></div>
+            </div>
+       </div>
+    </div>
+    <!-- /content -->
 
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
+		    <a href="index.html" data-transition="slide" class="navList nav01 cur">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
